modules/system/server/vm/k3s/cluster-conf/flux-web-ui-gateway-api.yml
# cf . https://fluxoperator.dev/docs/web-ui/ingress/
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-web
  namespace: flux-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: kube-system
  hostnames:
    - "flux.nathan-fouere.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: flux-operator
          namespace: flux-system
          port: 9080
